4. Добавление фрагмента со списком, обработчик нажатия, добавление стилей кнопок и оформления

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Mockup</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="buttton_text_change_valute">Изменить валюту</string>
+    <string name="tv_item_text_name">Name</string>
+    <string name="tv_text_char">Char</string>
 </resources>
